# bot250

./: .gitignore  CMakeLists.txt  README.md  README_DESKTOP.md  README_WEB.md  audio-alerts.js  crypto-messages.js  desktop_build.bat  desktop_build.sh  desktop_main.cpp  direct-speech.js  future-effects.js  future-hologram.js  future-platform-connector.js  index.html  mainwindow.cpp  mainwindow.h  news-assistant.css  news-assistant.js  package.json  resources.qrc  robot-voice.js  script.js  server.cpp  setup_git.bat  style.css  title-animation.css  touch.css  web_build.bat  web_build.sh
css/: crypto-messages.css  forex-messages.css  future-ui-enhancements.css  logo-style.css  news-notifications.css  responsive.css  title-animation-styles.css
js/: api-client.js  arabic-speech.js  desktop-api.js  forex-messages.js  future-launcher.js  future-title-effects.js  future-voice-commands.js  main.js  mobile-fixes.js  news-notifications.js  test-forex-messages.js  test-speech.js  title-animation.js  voice-quality.js
